Updated resume informations

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Andrew Au: Andrew-Au.com</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Andrew Au</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -38,7 +38,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">About</a>
+          <a class="nav-link js-scroll-trigger" href="#home">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
@@ -46,43 +46,44 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
-        <li class="nav-item">
+       <!--  <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-        </li>
+        </li> -->
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
 
   <div class="container-fluid p-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="home">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">Andrew
+          <span class="text-primary">Au</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">
+          <a href="mailto:andrewHau@gmail.com">andrewHau@gmail.com</a> · (513) 284-0202
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">Results-oriented professional with a strong foundation in community building and operations expertise in digital marketing, community workshops, and team building. Prior professional experience includes web development, social media management, and programming principles. Creative, flexible, and can provide leadership, in addition to, working as a part of a team.  Energized to perform at a high level and great interpersonal skills with the ability to form lasting relationships.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="http://www.linkedin.com/in/andrewhau">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="#">
+          <a href="http://twitter.com/andrew">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
+          <a href="https://www.youtube.com/c/andrewau0?sub_confirmation=1">
+            <i class="fab fa-youtube"></i>
           </a>
+          <a href="http://www.Instagram.com/andrewhau">
+            <i class="fab fa-instagram"></i>
+          </a>
+
         </div>
       </div>
     </section>
@@ -95,50 +96,97 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Director of Operations</h3>
+            <div class="subheading mb-3">Digital Charlotte</div>
+            <ul>
+              <li>Oversee the operations of Digital Charlotte’s digital literacy programming including ordering and updating incentive laptops for community members, external site visits, communicating and planning with partner organizations, and scheduling with workshop facilitators.</li>
+              <li>Managed the complete digital marketing strategy for Digital Charlotte which includes social media (Twitter, Facebook, Instagram, and Linkedin), monthly email newsletter, and website - <a href="www.digitalcharlotte.org">DigitalCharlotte.org</a>.</li>
+              <li>Collected and recorded data on various Digital Charlotte digital literacy workshops and social media analytics.</li>
+              <li>Ran multiple ideation sessions for internal and external partners using design thinking methodology which I learned as part of my professional development through Digital Charlotte.</li>
+              <li>Manage the Knight School of Communication at Queens University of Charlotte’s equipment room, including the complete inventory of camera and computer gear, the equipment reservation request system, and the student employees.</li>
+              <li>Worked with and directed the Digital Charlotte staff team which consisted of part-time employees, student interns, student work-studies, and volunteers.</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">May 2016 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Community Organizer</h3>
+            <div class="subheading mb-3">Tech Talent South</div>
+            <ul>
+              <li>Oversee the day-to-day operations of the Charlotte campus, including, but not limited to, student recruitment to various courses held throughout the year as well as creating and fostering student & community relationships within Charlotte and surrounding cities.
+              <li>Manage Tech Talent South’s Weekly FREE Kids Coding classes offered to the public all year-round. Assisting with the creation of the curriculum, recruiting student teachers, and interacting with the children and parents to help make each class a success for both student and teacher.</li>
+              <li>Assist with social media campaigns and posts, focusing on Twitter, Google+, LinkedIn, and Facebook social networks.</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">March 2015 - May 2016</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Ruby on Rails Web Developer</h3>
+            <div class="subheading mb-3">Technekes LLC</div>
+            <ul>
+              <li>Worked primarily in the backend of Ruby on Rail web applications, able to write code in Ruby and HTML/CSS.</li>
+              <li>Part of an agile development team with incorporating feedback from project managers, team leads, and other developers.</li>
+              <li>Main responsibility is to receive work stories to fix and resolve bugs, issues, and defects in existing applications.</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">August 2014 - March 2015</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Project Manager of Online Rebrand</h3>
+            <div class="subheading mb-3">Missionary Athletes International</div>
+            <ul>
+              <li>Conceptualized and implemented a redesign of the Missionary Athletes International website (<a href="maisoccer.com">MAIsoccer.com</a>).</li>
+              <li>Project leader, delegating tasks and ensuring the completion of every assignment. Serving as support to project members who have questions and needs for the project.</li>
+              <li>Worked alongside with multiple companies to create products designed specifically for the MAI website.</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">November 2013 - October 2014</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Administrative Coordinator of Urban Eagles Ministry</h3>
+            <div class="subheading mb-3">Charlotte Eagles Soccer Club</div>
+            <ul>
+              <li>Help develop an infrastructure for the newly created Urban Eagles ministry within the Charlotte Eagles organization.</li>
+              <li>Assisting with the logistics and day-to-day operations of the Urban Eagles.</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2010 - August 2014</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Director of Social Media</h3>
+            <div class="subheading mb-3">Charlotte Eagles Soccer Club </div>
+            <ul>
+              <li>Responsible for all the social media and digital marketing tools for the Charlotte Eagles - former USLPRO professional soccer team.</li>
+              <li>Increased the follower base for Charlotte Eagles in the Twitter and Facebook social networks.</li>
+              <li>Added and grew a follower base for the Charlotte Eagles in the Google+, Instagram, and Pinterest social networks.</li>
+              <li>Create a social media strategy to be implemented during the season, off-season, and in-game.</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">March 2011 - August 2014</span>
           </div>
         </div>
-
       </div>
-
     </section>
 
     <hr class="m-0">
@@ -149,31 +197,59 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">IDEOU</h3>
+            <div class="subheading mb-3">Advanced Design Thinking Certificate</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">2019 - In Progress</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">IDEOU</h3>
+            <div class="subheading mb-3">Foundation in Design Thinking Certificate</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2018 - 2019</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Tech Talent South</h3>
+            <div class="subheading mb-3">Full Stack Web Development Bootcamp</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2014</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Ohio Wesleyan Universtiy</h3>
+            <div class="subheading mb-3">Bachelors of Science in Economics Management</div>
+            <p>Activities:  Alpha Sigma Phi: Fundraising Coordinator (06-07), Interfraternity Council Representative (06-07); OWU Firedogs Ultimate Frisbee Team: Treasurer (06-08); OWU Transcript Newspaper: Advertisement Sales Representative (07-08)</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">2004 - 2008</span>
           </div>
         </div>
-
       </div>
     </section>
 
     <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
+      <div class="w-100">
+        <h2 class="mb-5">About Me</h2>
+        <p>Originally from Ohio, I moved to Charlotte, NC in 2008 after graduation because I wanted to live in a place with sunshine more than 3 months in a year. In my free time, I spend almost all of it with my wife and 1yr old son where I take many home videos of us together.</p>
+        <p>I have a small Youtube channel where I create and edit “glorified versions” of those home movies. Having those memories recorded and stored in a place like Youtube makes it easy for my wife and me and our families to watch these special moments in our lives with our child.</p>
+         <p>Want to connect and learn more about me? Reach out! Feel free to contact via email, phone, or socials!</p>
+      </div>
+    </section>
+
+    <!-- <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
@@ -235,21 +311,11 @@
             Agile Development &amp; Scrum</li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-      <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+<!--     <hr class="m-0">
+ -->
+  <!--   <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
@@ -281,7 +347,7 @@
             Place - James Buchanan High School - Hackathon 2005</li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
   </div>
 
